--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://always-green_owner:4mrCWtDgInv3@ep-lingering-dream-a5he6bzt.us-east-2.aws.neon.tech/always-green?sslmode=require"
+JWT_SECRET="secret"
